btn size and fix for timepicker getting cut off

--- a/client/templates/Layouts/AppLayout/AppLayout.less
+++ b/client/templates/Layouts/AppLayout/AppLayout.less
@@ -12,6 +12,8 @@
     & #main-content {
         padding: 15px 15px 0 15px;
         width: 100%;
+        min-height: 85vh;
+        
         & .h1 {
             margin: 0;
             padding: 0px 10px 40px 10px;
