--- a/src/less/bootstrap-theme/panels.less
+++ b/src/less/bootstrap-theme/panels.less
@@ -12,9 +12,13 @@
     padding: 14px 10px;
 }
 
-.panel-heading>.panel-title{
+.panel-heading .panel-title{
     height: auto;
-    font-size: @13px; 
+    font-size: @16px; 
+
+    small {
+        font-size: 70%;
+    }
 }
 
 .panel .panel-footer {
@@ -38,7 +42,6 @@
 
 .panel .panel-footer {
     font-weight: 400;
-    text-transform: uppercase;
     padding: 15px
 }
 
